[package]
name = "recon-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
array-lib = {git = "ssh://git@github.com/wyatt-A/array-lib.git", features = ["io-cfl","io-nifti"]}
clap = { version = "4.6.0", features = ["derive"] }
dft-lib = {git = "ssh://git@github.com/wyatt-A/dft-lib.git"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.0+spec-1.1.0"
